@@ -23,6 +23,7 @@ public:
     int16_t ResearchCompletedGraphic = -1;
     int16_t SpawningGraphic = -1;
     int16_t UpgradeGraphic = -1;
+    int16_t HeroGlowGraphic = -1;
     int32_t GarrisonGraphic = -1;
     int32_t SpecialGraphic = -1;
     int16_t AttackGraphic = -1;
