@@ -14,6 +14,7 @@ I recommend [url=http://aok.heavengames.com/blacksmith/showfile.php?fileid=10819
 Guide makers et cetera, please include the version into which your guide was written.
 
 Version [b]2021.5.23[/b]:
+-Added hero glow sprite for units.
 -Faster erasure of multiple items from lists.
 
 Version [b]2021.5.9[/b]:
